# zero-logement-vacant

./: .clever.json  .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  .mcp.json  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  .slugignore  .sonarcloud.properties  .talismanrc  .tech-refactors.yml  .worktreeinclude  .yarnrc.yml  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  MISTRAL.md  Procfile  README.md  cron.js  cron.json  eslint.config.mjs  jest.config.js  knexfile.ts  knip.json  nx.json  package-lock.json  package.json  rebase.md  scalingo.json  sonar-project.properties  tsconfig.base.json  tsconfig.json  (+2 more)
analytics/: .env.example  .gitignore  Dockerfile.metabase  PM_GUIDE.md  README.md  TODO.md  Untitled.ipynb  docker-compose-metabase.yml  docker-compose.yml  exploration.md  pyproject.toml  test.json
analytics/apps/vacancy_explainer/: README.md  app.py  md.py  pyproject.toml
analytics/dagster/: .backfill_ban_owners.lovac-2026.cursor.json  DATA_SOURCES_CATALOG.md  Dockerfile  FIX_ASSET_NAMING.md  IMPLEMENTATION_SUMMARY.md  LOVAC_POST_IMPORT.md  QUICK_START.md  README.md  README_EXTERNAL_SOURCES.md  dagster.yaml  pyproject.toml  requirements.txt  test_pipeline.sh  workspace.yaml
analytics/dagster/.dlt/: .sources  config.toml
analytics/dagster/.telemetry/: id.yaml
analytics/dagster/data/: most_frequent_words.json  topstories.csv  topstory_ids.json
analytics/dagster/docker/: Dockerfile
analytics/dagster/scripts/: CONTEXT.md  backfill_ban_owners.py
analytics/dagster/src/: __init__.py  config.py  definitions.py  hello.py  project.py  requirements.txt
analytics/dagster/tests/: test_ban_upsert.py  test_compilation.py  test_lovac_owner_housing_locations.py
analytics/dagster/zlv_dbt/: setup.py
analytics/dbt/: .dbt-test-coverage-allowlist.txt  .gitignore  .sqlfluff  .user.yml  CLAUDE.md  SKILL.md  TODO.tx  database_name.duckdb.wal  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements.txt
analytics/dbt/analyses/: ff23_lovac_local_id.sql  ff23_lovac_occupation.sql  marts_analysis_exit_flow_ff23_lovac.sql
analytics/dbt/backups/: stg_zlovac.sql  stg_zlovac_bkp.sql
analytics/dbt/docs/: GLOSSAIRE_METIER.md
analytics/dbt/schemas/: source-housing-owner.json  source-housing.json  source-owner.json
analytics/docs/: LOCOMVAC_Notice_Technique.md
analytics/exploration/: Build JSON files for production import.ipynb  Build graphs.ipynb  Copy DuckDB.ipynb  Explore Lovac.ipynb  Explore results.ipynb  Geography.ipynb  Ingest S3 in DUckdb.ipynb  Reconciliation Propriétaires With Splink.ipynb  Reconciliation Propriétaires With same local ids  Results.ipynb  Reconciliation Propriétaires With same local ids.ipynb  Reconciliation Propriétaires.ipynb  Rename DuckDB.ipynb
analytics/explorations/: 05-facteurs-temporels.ipynb  06-facteurs-financiers.ipynb  07-facteurs-territoriaux.ipynb  08-facteurs-morphologiques.ipynb  09-synthese-modelisation.ipynb  11-conclusions-recommandations.ipynb  14-analyse-density.ipynb  Anonymisation.ipynb  README_HOUSING_OUT.md  Test.ipynb  bash.sh  density_2025.xlsx  rapport-complet-sortie-vacance.ipynb  rapport-complet-sortie-vacance.slides.html  test.sh
analytics/import-lovac/: pyproject.toml  workspace.yaml
(+3967 files in other folders)
