[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.7.9",
    "dbt>=1.0.0.40.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "protobuf>=6.31.1",
    "sqlfmt>=0.0.3",
    "duckdb==1.3.1",
]
