[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.7.9",
    "dbt>=1.0.0.40.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "protobuf>=6.31.1",
    "sqlfmt>=0.0.3",
    "duckdb==1.3.1",
    "pip>=25.2",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
    "nbmerge>=0.0.4",
    "pandoc>=2.4",
    "pdflatex>=0.1.3",
    "dbt-duckdb>=1.7.5",
    "transformers[torch]>=4.56.2",
    "tiktoken>=0.11.0",
    "flair>=0.15.1",
    "requests>=2.32.5",
    "certifi>=2025.8.3",
    "requests-cache>=0.6.4",
    "xlrd>=2.0.2",
    "pyxlsb>=1.0.10",
    "pyarrow>=21.0.0",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.40.0",
]

[tool.uv.workspace]
members = ["dagster"]
