[project]
name = "zlv-dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster-webserver>=1.11.12",
    "dagster>=1.11.12",
    "dagster-postgres>=0.27.12",
    "dagster-aws>=0.27.12",
    "dagster-dbt>=0.27.12",
    "dagster-duckdb>=0.27.12",
    "dagster-embedded-elt>=0.27.12",
    "geoalchemy2>=0.18.0",
    "dbt-duckdb>=1.7.5",
    "duckdb>=1.3.1",
    "matplotlib>=3.10.6",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "s3fs>=0.4.2",
    "boto3>=1.40.36",
    "thefuzz>=0.22.1",
    "psutil>=7.0.0",
    "pyarrow>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
