[project]
name = "vacancy-explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.1",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "plotly>=6.5.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.11.0",
    "streamlit>=1.52.2",
]
